# slang

./: .gitignore  CMakeLists.txt  CMakeLists_allocators.txt  CMakeLists_original.txt  CMakeLists_refactored.txt  CMakeLists_test.txt  CONTRIBUTING.md  GC_IMPLEMENTATION_REPORT.md  GC_MSVC_PORT_SUMMARY.md  GC_TEST_REPORT.md  LICENSE  MEMORY_LEAK_REPORT.md  README.md  build_msvc.bat  build_time_module.sh  check_opcode66.c  closure_module.swift  end_to_end_test.sh  generate_large_module.py  large_manifest.json  large_module_100.swift  large_module_1000.swift  large_module_500.swift  manifest.json  module_system_final_report.md  module_system_test_summary.md  module_visibility_test.swift  native_time.c  native_time_proper.c  native_time_v2.c  simple_module_test.swift  simple_test  simple_test.c  test-bundle.swb  test_compile.c  test_comprehensive_leak  test_comprehensive_leak.c  test_direct_malloc.c  test_gc  test_gc.c  (+14 more)
.claude/: settings.local.json
benchmark/: bench_module_perf.c
build_debug/: swift_like_lang
calculator_app/: calculator_complete.swift  display.swift  main.swift  manifest.json  math_ops.swift
circular_a/: module.json
circular_b/: module.json
cmake/: FindGLFW.cmake  FindMiniZ.cmake  TestFramework.cmake
docs/: cleanup_summary.md  cli.md  development.md  final_completion_summary.md  language.md  memory_allocator_example.md  memory_allocators.md  memory_refactoring_progress.md  memory_refactoring_status.md  module_architecture_analysis.md  module_bundle_design.md  module_refactoring_plan.md  module_system.md  native_modules.md  project_reorganization_plan.md  project_status_summary.md  readme.md  refactoring_cleanup_plan.md  refactoring_status.md  refactoring_summary.md  remaining_todos.md  reorganization_summary.md  unistd_windows_porting.md
examples/: memory_allocator_demo.c  readme.md
examples/01-basics/: README.md  main.swift  module.json
examples/02-modules/: README.md  main.swift  main_simple.swift  manifest.json  module.json  modules-example.swiftmodule  string_utils.swift
examples/03-extensions/: README.md  main.swift  module.json  simple.swift
examples/04-structs/: README.md  main.swift  module.json  simple.swift
examples/05-closures/: README.md  main.swift  module.json
examples/06-stdlib/: README.md  main.swift  module.json
examples/07-combined-features/: README.md  main.swift  simple.swift
examples/08-native-interop/: README.md  build_time_module.swift  demo_consumer.swift  main.swift  simple_demo.swift  working_demo.swift
examples/09-module-demo/: README.md  main.swift  module.json  simple.swift
examples/module-hooks/: database.swift  module.json
examples/module-performance/: import_test.swift  module.json
include/ast/: ast.h  ast_printer.h
include/codegen/: compiler.h
include/debug/: debug.h
include/lexer/: lexer.h  token.h
include/parser/: parser.h
include/runtime/: bootstrap.h  builtin_modules.h  coroutine.h  module.h  module_archive.h  module_bundle.h  module_cache.h  module_compiler.h  module_hooks.h  module_inspect.h  package.h  package_manager.h
include/semantic/: analyzer.h  symbol_table.h  type.h  visitor.h
include/stdlib/: file.h  json.h  stdlib.h  utils.h
include/utils/: alloc.h  allocators.h  bytecode_format.h  cli.h  compiler_wrapper.h  error.h  hash_map.h  hash_map_v2.h  logger.h  memory.h  platform_compat.h  platform_dir.h  platform_dynlib.h  platform_fnmatch.h  platform_getopt.h  platform_glob.h  platform_threads.h  syntax_test.h  test_framework.h  test_macros.h  version.h
include/vm/: array.h  object_hash.h  string_pool.h  vm.h
module_test_suite/: cross_module_test.swift  init_order_a.swift  init_order_b.swift  math_manifest.json  math_module.swift  string_module.swift
modules/circular_a/: circular_a.swift
modules/circular_b/: circular_b.swift
modules/dependency_example/: main.swift  module.json
modules/hello/: hello.swift  module.json
modules/module_system/: module.json  module_system.swift
modules/test_imports/: module.json
modules/test_lazy/: module.json
modules/time/: module.json
param_test_mod/: manifest.json
scripts/: refactor_parser.py
simple_test_mod/: manifest.json
src/: main.c  main_allocators.c
src/ast/: ast.c  ast_allocators.c  ast_printer.c  ast_refactored.c
src/codegen/: compiler.c  compiler_refactored.c
src/debug/: debug.c  debug_refactored.c
src/lexer/: lexer.c  lexer_refactored.c  token.c
src/parser/: parser.c  parser_allocator_helpers.c  parser_allocators.c  parser_refactored.c
src/runtime/: bootstrap.c  builtin_modules.c  coroutine.c  module.c  module_archive.c  module_bundle.c  module_cache.c  module_compiler.c  module_format.c  module_hooks.c  module_inspect.c  module_natives.c  module_unload.c  package.c  package_manager.c
src/semantic/: analyzer.c  analyzer_refactored.c  symbol_table.c  symbol_table_allocators.c  type.c  visitor.c
src/stdlib/: file.c  fs_native.c  json.c  net_native.c  stdlib.c  sys_native.c  utils.c
src/tools/: bundle.c  module_compiler.c
src/utils/: alloc.c  allocators.c  bytecode_format.c  cli.c  cli_allocators.c  compiler_wrapper.c  error.c  error_refactored.c  hash_map.c  hash_map_refactored.c  hash_map_v2.c  logger.c  memory.c  memory_arena.c  memory_freelist.c  (+5 more)
test-bundle/: bundle.json  manifest.json
test_clean/: import_test.swift  main.swift
test_imports/: main.swift  math_utils.swift  module.json  utils.swift
test_mod/: manifest.json
test_module/: module.json  simple_test.swift
test_module_windows/: main.swift  module.json
test_modules/: lib.swift  main.swift  manifest.json  math.swift  math_utils.swift  module.json  string_utils_manifest.json  use_module.swift
test_native_module/: main.swift  manifest.json  native.c  wrapper.swift
test_project/: .gitignore  FINAL_REPORT.md  README.md  algorithms.swift  calculator.swift  data_types.swift  demo.swift  fibonacci_app.swift  final_test.swift  main.swift  main_simple.swift  manifest.json  math_utils.swift  patterns.swift  showcase.swift  simple_math.swift  string_utils.swift  todo_app.swift  working_features.swift
tests/: test_main.c
(+86 files in other folders)
